[package]
name = "btleplug"
version = "0.11.5"
authors = ["Nonpolynomial, LLC <kyle@nonpolynomial.com>"]
license = "MIT/Apache-2.0/BSD-3-Clause"
repository = "https://github.com/deviceplug/btleplug"
homepage = "https://github.com/deviceplug/btleplug"
edition = "2021"
description = """
A Cross-Platform Rust Bluetooth Low Energy (BLE) GATT
library.
"""
readme = "README.md"
keywords = ["bluetooth", "BLE", "bluez", "uwp", "corebluetooth"]
categories = ["hardware-support"]

[lib]
name = "btleplug"
path = "src/lib.rs"

[features]
serde = ["uuid/serde", "serde_cr", "serde_bytes"]

[dependencies]
async-trait = "0.1.80"
log = "0.4.21"
bitflags = "2.5.0"
thiserror = "1.0.61"
uuid = "1.8.0"
serde_cr = { package = "serde", version = "1.0.202", features = [
    "derive",
], default-features = false, optional = true }
serde_bytes = { version = "0.11.14", optional = true }
dashmap = "5.5.3"
futures = "0.3.30"
static_assertions = "1.1.0"
# rt feature needed for block_on in macOS internal thread
tokio = { version = "1.37.0", features = ["sync", "rt"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.7"
bluez-async = "0.7.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
once_cell = "1.19.0"
jni-utils = "0.1.1"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"
libc = "0.2.155"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56.0", features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Devices_Bluetooth_Advertisement",
    "Devices_Radios",
    "Foundation_Collections",
    "Foundation",
    "Storage_Streams",
] }

[dev-dependencies]
rand = "0.9.0-alpha"
pretty_env_logger = "0.5.0"
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread"] }
serde_json = "1.0.117"
